# litellm-manager

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: ARCHITECTURE.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  email.rs  email_template.rs  litellm.rs  mod.rs
src/components/: AppLayout.vue  InitialSetup.vue
src/components/ui/: Button.vue  Card.vue  Dialog.vue  Input.vue  Label.vue  Select.vue  Separator.vue  Skeleton.vue  Sonner.vue  Switch.vue  Table.vue  TableBody.vue  TableCell.vue  TableHead.vue  TableHeader.vue  TableRow.vue
src/router/: index.ts
src/stores/: app.ts
src/views/: DashboardView.vue  InviteView.vue  SettingsView.vue
