[package]
name = "litellm-admin"
version = "0.1.0"
description = "Litellm Admin Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "litellm_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
lettre = { version = "0.11", features = ["builder", "smtp-transport", "tokio1-native-tls"] }
tokio = { version = "1", features = ["full"] }
